testsuite/poke.pkl/index-diag-2.pk
/* { dg-do compile } */

"foo"
["foo"]; /* { dg-error "invalid index.*\n.*expected integral" } */
